--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-      - 'feature/*'  # You can include other branches if needed
+      - 'feature/*'
   pull_request:
     branches:
       - main
@@ -15,24 +15,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout code
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Step 2: Set up Python environment
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.x'  # Set the Python version (you can specify a version like 3.9)
+          python-version: '3.x'
 
-      # Step 3: Install dependencies
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install flake8  # Install flake8 for linting
+          pip install flake8 black
 
-      # Step 4: Run flake8 to lint the code
       - name: Run flake8
         run: |
-          flake8 .  # This runs flake8 on the whole repository (you can specify directories if needed)
+          flake8 .
+
+      - name: Auto-format code with black
+        run: |
+          black .  # Automatically formats the code
