--- a/example.env
+++ b/example.env
@@ -1,7 +1,18 @@
 # REMEMBER: Copy environment variables from this file to `docker-compose.yml` too!
 
+# Database
+
 DB_HOST=postgres_container
 DB_PORT=
 DB_NAME=
 DB_USER=
 DB_PASSWORD=
+
+# GitHub
+
+GH_CLIENT_ID=
+GH_CLIENT_SECRET=
+
+# Discord
+
+DC_WEBHOOK_URL=
