--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 annotated-types==0.7.0
 anyio==4.8.0
 certifi==2025.1.31
+charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
 dnspython==2.7.0
@@ -18,6 +19,7 @@ markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 orjson==3.10.15
+pillow==11.1.0
 psycopg2==2.9.10
 pydantic==2.10.6
 pydantic-extra-types==2.10.2
@@ -27,14 +29,17 @@ Pygments==2.19.1
 python-dotenv==1.0.1
 python-multipart==0.0.20
 PyYAML==6.0.2
+requests==2.32.3
 rich==13.9.4
 rich-toolkit==0.13.2
+semver==3.0.4
 shellingham==1.5.4
 sniffio==1.3.1
 starlette==0.45.3
 typer==0.15.1
 typing_extensions==4.12.2
 ujson==5.10.0
+urllib3==2.3.0
 uvicorn==0.34.0
 watchfiles==1.0.4
 websockets==14.2
