--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 annotated-types==0.7.0
 anyio==4.8.0
+asyncpg==0.30.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
@@ -8,6 +9,7 @@ dnspython==2.7.0
 email_validator==2.2.0
 fastapi==0.115.8
 fastapi-cli==0.0.7
+greenlet==3.1.1
 h11==0.14.0
 httpcore==1.0.7
 httptools==0.6.4
@@ -35,6 +37,7 @@ rich-toolkit==0.13.2
 semver==3.0.4
 shellingham==1.5.4
 sniffio==1.3.1
+SQLAlchemy==2.0.37
 starlette==0.45.3
 typer==0.15.1
 typing_extensions==4.12.2
