--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+altgraph==0.17.4
 annotated-types==0.7.0
 anyio==4.8.0
 asyncpg==0.30.0
@@ -21,6 +22,8 @@ markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 orjson==3.10.15
+packaging==24.2
+pefile==2023.2.7
 pillow==11.1.0
 psycopg2==2.9.10
 pydantic==2.10.6
@@ -28,8 +31,11 @@ pydantic-extra-types==2.10.2
 pydantic-settings==2.7.1
 pydantic_core==2.27.2
 Pygments==2.19.1
+pyinstaller==6.11.1
+pyinstaller-hooks-contrib==2025.1
 python-dotenv==1.0.1
 python-multipart==0.0.20
+pywin32-ctypes==0.2.3
 PyYAML==6.0.2
 requests==2.32.3
 rich==13.9.4
